--- a/src/pages/Home/Banner/banner.css
+++ b/src/pages/Home/Banner/banner.css
@@ -1,13 +1,12 @@
 [class^="number-slide"],
 [class*=" number-slide"] {
-  background: grey;
   display: flex;
   /* align-items: center;
   justify-content: center; */
-  font-size: 50px;
+  /* font-size: 50px; */
   color: #fff;
-  font-weight: 500;
-  height: 200px;
+  /* font-weight: 500; */
+  /* height: 200px; */
   max-height: 100vh;
   object-fit: cover;
 }
